--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -2,6 +2,7 @@
     display: inline-flex;
     flex-direction: column;
     gap: 10px;
+    margin: 10px;
 }
 
 .user {
@@ -32,7 +33,7 @@
 }
 
 .userPhoto {
-    width: 60px;
-    height: 50px;
+    width: 65px;
+    height: 60px;
     border-radius: 100%;
 }
