--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,15 @@
 .header {
     grid-area: h;
+    display: flex;
+    justify-content: space-between;
     background-color: burlywood;
 }
 
 .header img {
     height: 50px;
 
+}
+
+.loginBlock {
+margin-right: 10px;
 }
