--- a/src/components/Navbar/SideBar/SideBar.module.css
+++ b/src/components/Navbar/SideBar/SideBar.module.css
@@ -1,18 +1,19 @@
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 .sideBar {
-    display: grid;
-    margin-top: 10px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-
+	display: grid;
+	margin-top: 10px;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
 }
 
 .sideBar .items {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-gap: 5px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
+	grid-gap: 5px;
 }
